BUG#18558 "Partition pruning results are incorrect for certain class of WHERE clauses" : * Produce right results for conditions that were transformed to "(partitioning_range) AND   (list_of_subpartitioning_ranges)": make each partition id set iterator auto-reset itself   after it has returned all partition ids in the sequence * Fix "Range mapping" and "Range mapping" partitioning interval analysis functions to   correctly deal with NULL values.